--- a/EasyParkingBackend/pom.xml
+++ b/EasyParkingBackend/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.26</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
+        </dependency>
     </dependencies>
 
     <build>
